<resources>
    <string name="app_name">Sistema de compras 2019</string>
    <string name="livroUm">Android Em Ação (R$ 70,69)</string>
    <string name="livroDois">Google Android (R$ 180,00)</string>
    <string name="livroTres">Use a cabeça (R$ 100,00)</string>
    <string name="livroQuatro">Desenvolvimento para app (R$ 80,30)</string>
    <string name="livroCinco">Design Patterns (R$ 66,00)</string>
    <string name="comprar">Comprar</string>
    <string name="valorTotal">Valor Total</string>
</resources>
